@@ -15,7 +15,7 @@
 namespace Castle.MicroKernel.ModelBuilder.Inspectors
 {
     using System;
-
+    using Castle.Core;
     using Castle.Core.Configuration;
 
     /// <summary>
@@ -31,9 +31,16 @@ namespace Castle.MicroKernel.ModelBuilder.Inspectors
         /// </summary>
         /// <param name="kernel"></param>
         /// <param name="model"></param>
-        public virtual void ProcessModel(IKernel kernel, Castle.Core.ComponentModel model)
+        public virtual void ProcessModel(IKernel kernel, ComponentModel model)
         {
-            model.Configuration = kernel.ConfigurationStore.GetComponentConfiguration(model.Name);
+			IConfiguration config = kernel.ConfigurationStore.GetComponentConfiguration(model.Name);
+
+			if (config == null)
+			{
+				config = kernel.ConfigurationStore.GetBootstrapComponentConfiguration(model.Name);
+			}
+
+			model.Configuration = config;
         }
     }
 }
