@@ -14,17 +14,19 @@
 
 namespace Castle.Windsor
 {
-	using System;
-
 	using Castle.MicroKernel;
 
-
 	/// <summary>
-	/// Bad name. It also install facilities.
-	/// TODO: Better name!
+	/// Installs the components and facilities based on the
+	/// information on the configuration store.
 	/// </summary>
 	public interface IComponentsInstaller
 	{
+		/// <summary>
+		/// Perform installation.
+		/// </summary>
+		/// <param name="container">Target container</param>
+		/// <param name="store">Configuration store</param>
 		void SetUp(IWindsorContainer container, IConfigurationStore store);
 	}
 }
